Define key bindings for commands from the helpful package

--- a/config.org
+++ b/config.org
@@ -194,6 +194,22 @@ From http://sodaware.sdf.org/notes/emacs-daemon-doom-modeline-icons/.
 
 #+begin_src emacs-lisp
 (use-package helpful)
+
+;; Conf from https://github.com/Wilfred/helpful.
+(global-set-key (kbd "C-h f") #'helpful-callable)
+(global-set-key (kbd "C-h v") #'helpful-variable)
+(global-set-key (kbd "C-h k") #'helpful-key)
+(global-set-key (kbd "C-h x") #'helpful-command)
+
+;; Lookup the current symbol at point. C-c C-d is a common keybinding
+;; for this in lisp modes.
+(global-set-key (kbd "C-c C-d") #'helpful-at-point)
+
+;; Look up *F*unctions (excludes macros).
+;;
+;; By default, C-h F is bound to `Info-goto-emacs-command-node'. Helpful
+;; already links to the manual, if a function is referenced there.
+(global-set-key (kbd "C-h F") #'helpful-function)
 #+end_src
 
 
