--- a/config.org
+++ b/config.org
@@ -262,21 +262,25 @@ Language support:
         (typescript "https://github.com/tree-sitter/tree-sitter-typescript" "v0.23.2" "typescript/src")
         (bash "https://github.com/tree-sitter/tree-sitter-bash")
         ;; (cmake "https://github.com/uyha/tree-sitter-cmake")
-        ;; (css "https://github.com/tree-sitter/tree-sitter-css")
-        ;; (elisp "https://github.com/Wilfred/tree-sitter-elisp")
-        ;; (go "https://github.com/tree-sitter/tree-sitter-go")
+        (css "https://github.com/tree-sitter/tree-sitter-css")
+        (elisp "https://github.com/Wilfred/tree-sitter-elisp")
+        (go "https://github.com/tree-sitter/tree-sitter-go")
         ;; (html "https://github.com/tree-sitter/tree-sitter-html")
         ;; (javascript "https://github.com/tree-sitter/tree-sitter-javascript" "master" "src")
         ;; (json "https://github.com/tree-sitter/tree-sitter-json")
         ;; (make "https://github.com/alemuller/tree-sitter-make")
         ;; (markdown "https://github.com/ikatyang/tree-sitter-markdown")
-        ;; (python "https://github.com/tree-sitter/tree-sitter-python")
+        (python "https://github.com/tree-sitter/tree-sitter-python")
         ;; (toml "https://github.com/tree-sitter/tree-sitter-toml")
         ;; (tsx "https://github.com/tree-sitter/tree-sitter-typescript" "master" "tsx/src")
         ;; (yaml "https://github.com/ikatyang/tree-sitter-yaml")
         ))
-; Eval something like the following line to install an uncommented language.
-; (treesit-install-language-grammar 'typescript)
+#+end_src
+
+Eval something like the following line to install an uncommented language:
+#+begin_src emacs-lisp :eval never
+(dolist (lang '(bash typescript css elisp go python))
+  (treesit-install-language-grammar lang))
 #+end_src
 
 Package:
