--- a/config.org
+++ b/config.org
@@ -49,6 +49,15 @@ Use org-mode for the scratch buffer:
 ")
 #+end_src
 
+** Path
+
+#+begin_src elisp
+;; Add ~/.local/bin to the exec-path that Emacs uses to locate binaries.
+(add-to-list 'exec-path (expand-file-name "~/.local/bin"))
+;; Also pass it to any child processes so they inherit the same PATH.
+;(setenv "PATH" (concat (expand-file-name "~/.local/bin") path-separator (getenv "PATH")))
+#+end_src
+
 
 * User interface
 
