Setup justfile support

--- a/config.org
+++ b/config.org
@@ -427,6 +427,12 @@ Configure Rust support:
 (use-package yaml-mode)
 #+end_src
 
+*** justfile
+
+#+begin_src emacs-lisp
+(use-package just-mode)
+#+end_src
+
 
 * Completion
 
